Refine placeholder replacement logic