@@ -2,21 +2,15 @@ package core;
 
 import lombok.extern.slf4j.Slf4j;
 
-import java.io.BufferedReader;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.io.UncheckedIOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.nio.charset.StandardCharsets;
 
 @Slf4j
 public class PayloadLoader {
 
-    public static final String DATA_DIRECTORY = "src/test/resources/data";
+    public static final String DATA_DIRECTORY = "data";
 
     public static String getPayload(Endpoint endpoint) {
         return getPayload(endpoint.getName());
@@ -27,23 +21,28 @@ public class PayloadLoader {
     }
 
     private static String loadPayloadFromFile(String filename) {
-        File jsonPath = new File(DATA_DIRECTORY + "/payloads/" + filename + ".json");
-        try {
-            if (jsonPath.exists()) {
-                return new String(Files.readAllBytes(Paths.get(jsonPath.toString())));
-            } else {
-                throw new IllegalStateException("File not found");
-            }
+        String resourcePath = DATA_DIRECTORY + "/payloads/" + filename + ".json";
+        try (InputStream inputStream = openResource(resourcePath)) {
+            return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
         } catch (IOException ioException) {
-            throw new UncheckedIOException(ioException);
+            throw new UncheckedIOException("Unable to read payload: " + resourcePath, ioException);
         }
     }
 
     public static String loadSchema(String filename) {
-        try {
-            return new String(Files.readAllBytes(Paths.get(DATA_DIRECTORY + "/schemas/" + filename + ".json")));
-        } catch (IOException e) {
-            throw new IllegalStateException(e);
+        String resourcePath = DATA_DIRECTORY + "/schemas/" + filename + ".json";
+        try (InputStream inputStream = openResource(resourcePath)) {
+            return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+        } catch (IOException ioException) {
+            throw new UncheckedIOException("Unable to read schema: " + resourcePath, ioException);
         }
+    }
+
+    private static InputStream openResource(String resourcePath) {
+        InputStream inputStream = Thread.currentThread().getContextClassLoader().getResourceAsStream(resourcePath);
+        if (inputStream == null) {
+            throw new IllegalStateException("Resource not found: " + resourcePath);
+        }
+        return inputStream;
     }
 }
